--- a/client/src/Customer/DemoPages/QuestDemo.css
+++ b/client/src/Customer/DemoPages/QuestDemo.css
@@ -1,8 +1,14 @@
 .quest
 {
     background-color: #fff;
-
+    display: grid;
+    align-content: center;
+    justify-content: center;
     font-family: Helvetica;
+}
+
+main.quest{
+    
 }
 
 input.quest
@@ -69,6 +75,24 @@ textarea.quest:focus{
 .quest.logo{
     content:url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Meta_Quest_logo.svg/1280px-Meta_Quest_logo.svg.png);
     width: 300px;
+}
+
+.quest.buttons{
+    display: flex;
+}
+
+button.quest{
+    border-radius: 80px;
+  width: 150px;
+  height: 50px;
+  cursor: pointer;
+  border: none;
+  font-size: 25px;
+}
+
+.button.quest:active
+{
+  box-shadow: inset 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .quest.submit {
